--- a/wsn.html
+++ b/wsn.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DIARY</title>
+    <title>wsn</title>
 </head>
 <body>
-    <p>diary</p>
+    <p>wsn</p>
 </body>
 </html>
